[tool.poetry]
name = "function-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
django-environ = "^0.9.0"
boto3 = "^1.24.12"
reportlab = "^3.6.10"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
